--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,45 @@
   font-weight: 400;
 }
 
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
 @media screen and (min-width: 1000px) {
   /* hack! to detect non-touch devices */
   div#links a {
@@ -65,12 +104,6 @@ button[disabled] {
 
 button[disabled]:hover {
   background-color: #d84a38;
-}
-
-canvas {
-  background-color: #ccc;
-  max-width: 100%;
-  width: 100%;
 }
 
 code {
@@ -222,14 +255,6 @@ strong {
 textarea {
   resize: none;
   font-family: 'Roboto', sans-serif;
-}
-
-video {
-  background: #222;
-  margin: 0 0 20px 0;
-  --width: 100%;
-  width: var(--width);
-  height: calc(var(--width) * 0.75);
 }
 
 ul {
